k8s/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xfinder-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: xfinder-api
  template:
    metadata:
      labels:
        app: xfinder-api
    spec:
      containers:
        - name: xfinder-api
          image: ethans333/xfinder-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
